inventory css fix, too wide

--- a/assets/css/inventory.css
+++ b/assets/css/inventory.css
@@ -19,7 +19,7 @@
 .inventoryContentPlayer {
 	clear: left;
 	height: 100%;
-	width: 100%;
+	width: 95%;
 	position: relative;
 	overflow: auto;
 }
